fixed config.inc.php to create $config array fixed package errors

--- a/debian/control
+++ b/debian/control
@@ -8,10 +8,9 @@ Standards-Version: 3.9.6
 Vcs-Git: https://github.com/aroth-arsoft/pkg-roundcube-amacube
 Vcs-Browser: https://github.com/aroth-arsoft/pkg-roundcube-amacube
 
-Package: roundcube-plugins-extra
+Package: roundcube-amacube
 Architecture: all
-Depends: roundcube-amacube,
-         roundcube-core (>= 1.1.2),
+Depends: roundcube-core (>= 1.1.2),
          ${misc:Depends}
 Description: Amavis plugin for roundcube
  Roundcube plugin to let users control their amavis settings as 
